--- a/index.html
+++ b/index.html
@@ -184,7 +184,72 @@
           <input placeholder="Join Us" class="joinbtn" />
         </div>
       </div>
+      <div class="rectangle_41"></div>
+      <div class="footer">
+        <div class="try">Try for free!</div>
+        <div class="get">Get limited 1 week free try our features!</div>
+        <button class="foot_rectangle_26">
+          <span>Request Demo</span>
+          <div class="foot_vector_74"></div>
+        </button>
+        <button class="foot_rectangle_25"><span>Learn More</span></button>
+        <div class="foot_group_62">
+          <div class="foot_Abstract_Circle_1"></div>
+          <div class="foot_insignia_text">Insignia</div>
+        </div>
+        <div class="foot_text">
+          Insignia Society, 234 <br />Bahagia Ave Street PRBW 29281
+        </div>
+        <div class="info_text">
+          info@insignia.com <br />
+          1-232-3434 (Main)
+        </div>
+        <div class="copy_text">© Insignia™, 2020. All rights reserved.</div>
+        <div class="foot_about">About</div>
+        <div class="foot_about_text">
+          Profile <br />
+          Features <br />
+          Careers <br />
+          DW News
+        </div>
+        <div class="foot_help">Help</div>
+        <div class="foot_help_text">
+          Support <br />Sign Up <br />Guide <br />Reports <br />Q&A
+        </div>
+        <div class="social">Social Media</div>
+        <div class="ft_grp_34">
+          <div
+            class="foot_group_34"
+            style="cursor: pointer"
+            onclick="window.open('https://www.facebook.com/devender.pahadiyadevsh/');"
+          ></div>
+        </div>
+        <div class="ft_grp_32">
+          <div
+            class="foot_group_32"
+            style="cursor: pointer"
+            onclick="window.open('https://www.instagram.com/devender_pahadiaofficial.devsh/');"
+          ></div>
+        </div>
+        <div class="ft_grp_33">
+          <div
+            class="foot_group_33"
+            style="cursor: pointer"
+            onclick="window.open('https://twitter.com/devenderpahadia');"
+          ></div>
+        </div>
+        <div
+          class="chat"
+          style="cursor: pointer"
+          onclick="window.open('https://www.facebook.com/devender.pahadiyadevsh/');"
+        >
+          <div class="chat_43"></div>
+          <div class="chat_42"></div>
+          <div class="union_ellipse1"></div>
+          <div class="union_ellipse2"></div>
+          <div class="union_ellipse3"></div>
+        </div>
+      </div>
     </section>
-    <div class="rectangle_41"></div>
   </body>
 </html>
